// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Note> DOM element renders correctly with \`isError prop 1`] = `
<div>
  <span
    className="htz-a htz-b htz-c htz-d htz-e htz-f"
    id={null}
  >
    error text
  </span>
</div>
`;

exports[`<Note> DOM element renders correctly with \`isError prop 2`] = `".htz-a{display:block}.htz-f{color:#A8001C}@media (max-width: 79.9375em){.htz-b{font-size:1.8333333333333333rem}.htz-c{line-height:1.6363636363636365em}}@media (min-width: 80em){.htz-d{font-size:1.7142857142857142rem}.htz-e{line-height:1.75em}}"`;

exports[`<Note> DOM element renders correctly with minimal required props 1`] = `
<div>
  <span
    className="htz-a htz-b htz-c htz-d htz-e htz-f"
    id={null}
  >
    text
  </span>
</div>
`;

exports[`<Note> DOM element renders correctly with minimal required props 2`] = `".htz-a{display:block}.htz-f{color:#787878}@media (max-width: 79.9375em){.htz-b{font-size:1.8333333333333333rem}.htz-c{line-height:1.6363636363636365em}}@media (min-width: 80em){.htz-d{font-size:1.7142857142857142rem}.htz-e{line-height:1.75em}}"`;
